force-app/main/default/objects/To_Do__c/fields/Access__c.field-meta.xml
<CustomField>
    <fullName>Access__c</fullName>
    <label>Access</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Private</fullName>
            </value>
            <value>
                <fullName>Public</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>