force-app/main/default/objects/To_Do__c/fields/Date_Type__c.field-meta.xml
<CustomField>
    <fullName>Date_Type__c</fullName>
    <label>Date Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Specific Date</fullName>
            </value>
            <value>
                <fullName>Relative Date</fullName>
            </value>
            <value>
                <fullName>No Date</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>