force-app/main/default/objects/To_Do__c/fields/Sorting__c.field-meta.xml
<CustomField>
    <fullName>Sorting__c</fullName>
    <formula>CASE(TEXT(Priority__c),
&apos;High&apos;, TEXT(YEAR(Due_Date__c)) &amp; &apos;.&apos; &amp;  if(Month(Due_Date__c) &lt; 10, &apos;0&apos; + TEXT(Month(Due_Date__c)), TEXT(Month(Due_Date__c))) &amp; &apos;.&apos; &amp; if(Day(Due_Date__c) &lt; 10, &apos;0&apos; + TEXT(Day(Due_Date__c)), TEXT(Day(Due_Date__c))) &amp; &apos;.1&apos;,
&apos;Normal&apos;, TEXT(YEAR(Due_Date__c)) &amp; &apos;.&apos; &amp; if(Month(Due_Date__c) &lt; 10, &apos;0&apos; + TEXT(Month(Due_Date__c)), TEXT(Month(Due_Date__c))) &amp; &apos;.&apos; &amp; if(Day(Due_Date__c) &lt; 10, &apos;0&apos; + TEXT(Day(Due_Date__c)), TEXT(Day(Due_Date__c))) &amp; &apos;.2&apos;,
&apos;Low&apos;, TEXT(YEAR(Due_Date__c)) &amp; &apos;.&apos; &amp; if(Month(Due_Date__c) &lt; 10, &apos;0&apos; + TEXT(Month(Due_Date__c)), TEXT(Month(Due_Date__c))) &amp; &apos;.&apos; &amp; 
if(Day(Due_Date__c) &lt; 10, &apos;0&apos; + TEXT(Day(Due_Date__c)), TEXT(Day(Due_Date__c))) &amp; &apos;.3&apos;,
&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sorting</label>
    <type>Text</type>
</CustomField>