force-app/main/default/objects/To_Do__c/fields/Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type__c</fullName>
    <label>Sub-Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account Servicing</fullName>
            </value>
            <value>
                <fullName>Company Infrastructure</fullName>
            </value>
            <value>
                <fullName>Desert House</fullName>
            </value>
            <value>
                <fullName>El Segundo House</fullName>
            </value>
            <value>
                <fullName>Events</fullName>
            </value>
            <value>
                <fullName>Family</fullName>
            </value>
            <value>
                <fullName>Finances</fullName>
            </value>
            <value>
                <fullName>Health</fullName>
            </value>
            <value>
                <fullName>Market Intel</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Projects</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>