force-app/main/default/objects/To_Do__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <label>Subject</label>
    <length>50</length>
    <type>Text</type>
</CustomField>