force-app/main/default/objects/To_Do__c/listViews/My_To_Do_List.listView-meta.xml
<ListView>
    <fullName>My_To_Do_List</fullName>
    <columns>NAME</columns>
    <columns>Due_Date__c</columns>
    <columns>Priority__c</columns>
    <columns>Type__c</columns>
    <columns>Sub_Type__c</columns>
    <columns>Sorting__c</columns>
    <columns>Comments__c</columns>
    <filterScope>Everything</filterScope>
    <label>All To Dos</label>
</ListView>